--- a/css/style.css
+++ b/css/style.css
@@ -188,22 +188,36 @@ p.solid{border-style: ridge;
     justify-content: space-around;
     background-image: linear-gradient(to right,#142B77 ,black ,#142B77 );
     border-style: ridge;
-      
+    border-left: 0px;
+    border-right: 0px;
+    
 }
 
 p.solid2{;
     height: 40px;
-      
+    
     padding-top: 7px; 
     margin-bottom: 0px;
 }
 
+p.solid2 label{
+    border-style: ridge ;
+    border-top: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+    
+
+}
+
+
 .container-fluid3 .row .col-4{
     border-style: ridge;
+    
     border-top: 0;
-    border-right: 10px;
+    border-right: 0px;
     border-bottom: 0px;
-    width: 30%%;
+
+    
    
 
 }
