--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,8 @@ p.solid2 label{
     border-top: 0px;
     border-left: 0px;
     border-bottom: 0px;
+   
+    
     
 
 }
@@ -215,14 +217,19 @@ p.solid2 label{
     
     border-top: 0;
     border-right: 0px;
-    border-bottom: 0px;
-
-    
+    border-bottom: 0px; 
    
 
 }
 
-
+.vertical{
+    border-style: ridge;
+    border-top: 0;
+    border-right: 0px;
+    border-bottom: 0px;
+    
+    
+}
 
 
 
