--- a/css/style.css
+++ b/css/style.css
@@ -181,15 +181,15 @@ p.solid{border-style: ridge;
 .textcomprar:hover{color: white; text-decoration: none;}
 
 .abavendas{
-    display: flex;
     position:relative;
     background-color: black;
     color: white;
-    justify-content: space-around;
+    
     background-image: linear-gradient(to right,#142B77 ,black ,#142B77 );
     border-style: ridge;
     border-left: 0px;
     border-right: 0px;
+    text-align: center
     
 }
 
@@ -205,6 +205,7 @@ p.solid2 label{
     border-top: 0px;
     border-left: 0px;
     border-bottom: 0px;
+    border-right: 0px;
    
     
     
@@ -222,11 +223,14 @@ p.solid2 label{
 
 }
 
-.vertical{
+.container-fluid4 .row .col-4{
     border-style: ridge;
-    border-top: 0;
-    border-right: 0px;
     border-bottom: 0px;
+    border-top: 0px;
+    border-right: 0px;
+
+   
+    
     
     
 }
