--- a/css/style.css
+++ b/css/style.css
@@ -251,12 +251,43 @@ p.solid2 label{
 }
 
 .depoimentos{
-    position: relative;
+    
     width: 100%;
-    height: 300px;
+    height: 400px;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    
+    
+    
+    
 
 }
+
+.depoimentos .figure4{
+    margin-top: 30px;
+    width: 7%;
+    height: 25%;
+    margin-bottom: -15px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    
+    
+}
+
+.depoimentos p{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    width: 25%;
+    padding-bottom: 10px;
+    text-align: justify;
+}
+
 
 
 
