--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ Header{
     text-transform: uppercase;
     background-image: linear-gradient(to bottom,black 20%,#082E8F );
     
+    
 }
 
 .abaprodutos{
@@ -194,7 +195,7 @@ p.solid{border-style: ridge;
     
 }
 
-p.solid2{;
+p.solid2{
     height: 40px;
     
     padding-top: 7px; 
@@ -255,10 +256,11 @@ p.solid2 label{
     width: 100%;
     height: 400px;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
-    position: absolute;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    padding-top: 10px;
     
     
     
@@ -287,6 +289,53 @@ p.solid2 label{
     padding-bottom: 10px;
     text-align: justify;
 }
+
+
+
+.rodape{
+    position: relative;
+    width: 100%;
+    height: 210px;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    
+    background-color: black;
+    text-decoration: none;
+    
+} 
+
+.links {
+    padding-top: 10px;
+    text-decoration: none;
+    color: white;
+    
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.figure5{
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    
+}
+
+
+
+
+
+
+
+
+
+
+    
+ 
+
+
+    
 
 
 
