--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+*{
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    font-size: 100%;
+
+}
+
+
+
+
 Header{
     background-color: black ;
     color: white;
@@ -8,9 +21,7 @@ Header{
     
 }
 
-#headgame{
-    margin-top:  ;
-}
+
 
 .abaprodutos{
     
@@ -88,40 +99,156 @@ p.inset {border-style: inset;
     background-image: linear-gradient(to bottom,#0637b4 5px,black 35px );
 }
 
-.capa{
+
+main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
+
+.container-fluid5{
+    padding: 0;
+    margin: 0;
     
-    height: 450px;
-    background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
+    
+}
+
+.container-fluid5 .row .col-3 {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0px;
+    
+
+}
+
+.container-fluid5 .row .col-3 .img-esquerda h4{
+    color: white;
     text-align: center;
+    justify-content: center;
+    position: relative;
+    text-transform: uppercase;
+    bottom: 50px;
+    border-style:solid;
+    border-radius: 20px;
+    left: 12px;
+    background-color: rgb(9, 99, 9);
+    
+    
+    
+    
+}
+
+.container-fluid5 .row .col-3 .img-esquerda h4:hover{
+    text-decoration: none; 
+    color: white; 
+    background-color: rgb(110, 26, 26);
+}
+
+.container-fluid5 .row .col-3 .img-direita h4:hover{
+    text-decoration: none; 
+    color: white; 
+    background-color: rgb(110, 26, 26);
 }
 
 
-.capa .figure{
+.container-fluid5 .row .col-3 .img-direita h4{
+    
+    color: white;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+    text-transform: uppercase;
+    bottom: 50px;
+    border-style: solid;
+    border-radius: 20px;
+    background-color: rgb(9, 99, 9);
     
     
-    width:100%;
-    height: 155%;
     
 }
 
-
-.col-4 .textbanner1{
+.img-esquerda {
     position: absolute;
+    width: auto;
+    width: 330px;
+    height: 427px;
+    text-align: center;
+    
+
+} 
+
+.container-fluid5 .row .col-6 {
+    margin: 0;
+    padding: 0;
+}
+
+
+.carrousel{
+    display: flex;
+    overflow: hidden;
+    margin: 0;
+    border: 0px;
+    width: 687.5px;
+    height: 427px;
+    margin: 0px;
+    
+    
+}
+
+.carrousel img{
+    width: 687.5px;
+    height: 427px;
+
+}
+
+
+
+
+
+.img-esquerda img{
+    
+    width: 343.75px;
+    height: 427px;
+    
+
+}
+   
+.img-direita {
+    position: absolute;
+    width: 330px;
+    height: 427px;
+    
+    
+
+} 
+    
+    
+
+
+.img-direita img {
+    width: 330px;
+    height: 427px;
+    overflow: hidden;
+    
+
+    
+    
+}
+
+
+.col-4 .textbanner0{
+    
     top: 150px;
     color: white;
     text-align: right;
     
 }    
 
-.col-4 .textbanner2{
-    position: absolute;
+.col-4 .textbanner0{
+    
     top: 150px;
     color: white;
     text-align: justify;
 }    
 
-.col-4 .textbanner3{
-    position: absolute;
+.col-4 .textbanner0{
+    
     top: 150px;
     color: white;
      
