--- a/css/style.css
+++ b/css/style.css
@@ -314,24 +314,63 @@ p.solid{border-style: ridge;
 
 }
 
-.centro{
+.centro{ 
     background-color: black;
     height: 530px;
+    width: 100%;
     text-align: center;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
+    display: block;
+    
 
 }
 
-.centro2{
+.botoes{
+    display: block;
+    position: relative;
+    text-align: center;
+    top: 90px;
+    
+    
+    
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 10px;
+    background-color: #bbb;
+    border-radius: 50%;
+    text-align: center;
+    transition: background-color 0.6s ease; 
+  }
+
+#carousel1{
+    position: relative; 
+    display: block;
+    
+} 
+
+#carousel2{
+    position: relative; 
     display: none;
-}
+    
+} 
+
+#carousel3{
+    position: relative; 
+    display: none;
+    
+} 
+
 
 .figure2{
     position: relative;
     top: 50px;
-    width: 50%;
-    height: 50%;
+    width: 214px;
+    height: 176px;
     border-style: solid;
     
 }
@@ -366,28 +405,9 @@ p.solid{border-style: ridge;
 .textcomprar{color: white; text-decoration: none;}
 .textcomprar:hover{color: white; text-decoration: none;}
 
-.botoes{
-    display: inline-flex;
-    position: relative;
-   
-    top: 130px;
-    
-    
-}
 
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 10px;
-    background-color: #bbb;
-    border-radius: 50%;
-    text-align: center;
-    transition: background-color 0.6s ease;
-    
-    
-    
-  }
+
+
 
 
 
