--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ p.inset {border-style: inset;
 
     background-color: red;
     width: auto;
-    height: 8.60vh;
+    height: 100%;
     
     background-image: linear-gradient(to bottom,#0637b4 5px,black 35px );
 }
@@ -201,7 +201,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
 
 .carrousel img{
     
-    width: 51.0vw;
+    width: 52.0vw;
     height: 73.5vh;
     
 }
@@ -237,7 +237,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
 
 .img-esquerda img{
     
-    width: 25.16vw;
+    width: 26.16vw;
     height: 73.5vh;
     
 
@@ -306,7 +306,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
 }
 
 p.solid{border-style: ridge;
-    height: 6.88vh;
+    height: 40px;
    
     border-left-width: 0px ;
     border-right-width: 0px ;
@@ -317,7 +317,7 @@ p.solid{border-style: ridge;
 
 .centror{
     background-color: black;
-    height: 91.22vh;
+    height: 530px;
     text-align: center;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
@@ -326,7 +326,7 @@ p.solid{border-style: ridge;
 
 .centro{ 
     background-color: black;
-    height: 91.22vh;
+    height: 530px;
     width: 100%;
     text-align: center;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
@@ -402,7 +402,7 @@ p.solid{border-style: ridge;
     background-color: rgb(9, 99, 9);
     color: white;
     width: 40%;
-    height: 6.884vh;
+    height: 40px;
     padding-top: 8px;
     text-transform: uppercase;
     text-decoration: none;
@@ -435,10 +435,10 @@ p.solid{border-style: ridge;
 }
 
 p.solid2{
-    height: 6.88vh;
+    height: 100%;
     
     padding-top: 7px; 
-    margin-bottom: 0px;
+    margin-bottom: 5px;
 }
 
 p.solid2 label{
@@ -456,7 +456,7 @@ p.solid2 label{
 
 .container-fluid3 .row .col-4{
     border-style: ridge;
-    height: 91.22vh;
+    height: 530px;
     border-top: 0;
     border-right: 0px;
     border-bottom: 0px; 
@@ -493,7 +493,7 @@ p.solid2 label{
 .depoimentos{
     
     width: 100%;
-    height: 68.85vh;
+    height: 400px;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
     margin-left: auto;
@@ -578,7 +578,7 @@ p.solid2 label{
 .rodape{
     position: relative;
     width: 100%;
-    height: 36.14vh;
+    height: 210px;
     text-transform: uppercase;
     color: white;
     text-align: center;
