--- a/css/style.css
+++ b/css/style.css
@@ -488,8 +488,8 @@ p.solid2 label{
 .figure3{
     position: relative;
     top: 50px;
-    width: 50%;
-    height: 37%;
+    width: 15.79vw;
+    height: 33.75vh;
     border-style: solid;
 
 }
@@ -519,8 +519,8 @@ p.solid2 label{
     justify-content: end;
     justify-items: center;
     background-color: transparent;
-    bottom:  100px;
-    right: 400px;
+    bottom:  17.21vh;
+    right: 29.28vw;
     
   }
 
@@ -531,10 +531,9 @@ p.solid2 label{
     border: #082E8F;
     border-width: 0 0 2px 2px;
     transform: rotate(225deg);
-    bottom:  100px;
-    left: 400px;
     background-color: transparent;
-
+    bottom:  17.21vh;
+    left: 29.28vw;
   }
 
 #depo1{
@@ -609,7 +608,31 @@ p.solid2 label{
     
 }
 
+#barras{
+    display: none;
 
+}
+
+@media screen and (max-width: 1100px) {
+    .cabecalho {
+        position: relative;
+    }
+    
+    .menu {
+        display: none;
+
+        position: absolute;
+        top: 80px;
+        right: 0px;
+
+        height: 400px;
+
+        flex-direction: column;
+        justify-content: space-around;
+        background-color: #1E1C21;
+        align-items: center;
+
+    }
 
 
 
