--- a/css/style.css
+++ b/css/style.css
@@ -644,13 +644,15 @@ p.solid2 label{
         height: 620px;
         margin: 0;
         padding: 0;
-        width: 450;
+        width: 450px;
+        height: 460px;
         
     }
     #imgguerreiro{display: none;}
     
     .container-fluid5 .row .col-6{
         width: 450px;
+        height: 218px;
         
         
     }
@@ -685,18 +687,19 @@ p.solid2 label{
     
     .img-direita{
         display: flex;
-        width: 229px;
+        width: 220px;
         height: 250px;
     }
 
     .img-direita img{
         display: flex;
-        width: 229px;
+        width: 220px;
         height: 250px;
     }
 
     .textcomprar{
         position: absolute;
+        display: none;
     }
     
 
