--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style:solid;
     border-radius: 20px;
     left: 12px;
-    font-size: 1.83vw;
+    font-size: 25px;
     background-color: rgb(9, 99, 9);
     
     
@@ -163,7 +163,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style: solid;
     border-radius: 20px;
     background-color: rgb(9, 99, 9);
-    font-size: 1.83vw;
+    font-size: 25px;
 
     
     
@@ -330,7 +330,7 @@ p.solid{border-style: ridge;
 .centro{ 
     background-color: black;
     height: 530px;
-    width: 100%;
+    
     text-align: center;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
@@ -404,7 +404,7 @@ p.solid{border-style: ridge;
     border-radius: 10px;
     background-color: rgb(9, 99, 9);
     color: white;
-    width: 12.48vw;
+    width: 170.5px;
     height: 40px;
     padding-top: 8px;
     text-transform: uppercase;
@@ -439,7 +439,7 @@ p.solid{border-style: ridge;
 }
 
 p.solid2{
-    height: 100%;
+    
     
     padding-top: 7px; 
     margin-bottom: 5px;
@@ -496,8 +496,8 @@ p.solid2 label{
 
 .depoimentos{
     
-    width: 100%;
-    height: 400px;
+    width: 98.9vw;
+    height: 68.84vh;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
     margin-left: auto;
@@ -576,12 +576,15 @@ p.solid2 label{
     text-align: justify;
 }
 
-
+footer{
+    width: 98.9vw;
+    height: 36.14vh;
+}
 
 .rodape{
     position: relative;
-    width: 100%;
-    height: 210px;
+    width: 98.9vw;
+    height: 36.14vh;
     text-transform: uppercase;
     color: white;
     text-align: center;
@@ -638,6 +641,7 @@ p.solid2 label{
         overflow: hidden;
         width: 450px;
         height: 350px;
+        overflow: hidden;
 
     }
 
@@ -648,7 +652,7 @@ p.solid2 label{
         padding: 0;
         width: 450px;
         position: relative;
-        
+        overflow: hidden;
         
     }
     #imgguerreiro{display: none;}
@@ -656,16 +660,17 @@ p.solid2 label{
     .container-fluid5 .row .col-6{
         width: 450px;
         position: relative;
-        height: 220px;
-        overflow-y: hidden;
+        height: 200px;
+        overflow: hidden;
+        
         
     }
 
     #img-carrousel .imgtexto img {
         width: 450px;
-        height: 220px;
+        height: 200px;
         position: relative;
-        
+        overflow: hidden;
     }
 
     
@@ -682,20 +687,20 @@ p.solid2 label{
     #imgguerreiroc{
         display: flex;
         width: 225px;
-        height: 140px;
+        height: 150px;
         
     }
 
     #imgguerreiroc img{
         display: flex;
-        width: 10px;
-        height: 140px;
+        width: 225px;
+        height: 150px;
     }
     
     .img-direita{
         display: flex;
         width: 235px;
-        height: 140px;
+        height: 150px;
     }
 
     .img-direita img{
@@ -705,7 +710,7 @@ p.solid2 label{
     }
 
     .textcomprar{
-        display: none;
+       
     }
     
 
