Consertando scrool na horizontal

--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,16 @@
     
 }
 
-html, body{overflow-x: hidden;}
+html, body
 
 
 
 Header{
-    background-color: black ;
+    
     color: white;
     text-transform: uppercase;
     background-image: linear-gradient(to bottom,black 20%,#082E8F );
-    
+    overflow-x: hidden;
     
     
 }
