--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style:solid;
     border-radius: 20px;
     left: 12px;
-    font-size: 25px;
+    font-size: 1.5em;
     background-color: rgb(9, 99, 9);
     
     
@@ -163,7 +163,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style: solid;
     border-radius: 20px;
     background-color: rgb(9, 99, 9);
-    font-size: 25px;
+    font-size: 1.5em;
 
     
     
@@ -405,7 +405,7 @@ p.solid{border-style: ridge;
     background-color: rgb(9, 99, 9);
     color: white;
     width: 170.5px;
-    height: 40px;
+    max-height: 40px;
     padding-top: 8px;
     text-transform: uppercase;
     text-decoration: none;
