--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style:solid;
     border-radius: 20px;
     left: 12px;
-    font-size: 25px;
+    font-size: 1.83vw;
     background-color: rgb(9, 99, 9);
     
     
@@ -163,7 +163,7 @@ main{background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );}
     border-style: solid;
     border-radius: 20px;
     background-color: rgb(9, 99, 9);
-    font-size: 25px;
+    font-size: 1.83vw;
 
     
     
@@ -330,7 +330,7 @@ p.solid{border-style: ridge;
 .centro{ 
     background-color: black;
     height: 530px;
-    
+    width: 100%;
     text-align: center;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
@@ -404,7 +404,7 @@ p.solid{border-style: ridge;
     border-radius: 10px;
     background-color: rgb(9, 99, 9);
     color: white;
-    width: 170.5px;
+    width: 12.48vw;
     height: 40px;
     padding-top: 8px;
     text-transform: uppercase;
@@ -439,7 +439,7 @@ p.solid{border-style: ridge;
 }
 
 p.solid2{
-    
+    height: 100%;
     
     padding-top: 7px; 
     margin-bottom: 5px;
@@ -496,8 +496,8 @@ p.solid2 label{
 
 .depoimentos{
     
-    width: 98.9vw;
-    height: 68.84vh;
+    width: 100%;
+    height: 400px;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
     margin-left: auto;
@@ -576,15 +576,12 @@ p.solid2 label{
     text-align: justify;
 }
 
-footer{
-    width: 98.9vw;
-    height: 36.14vh;
-}
+
 
 .rodape{
     position: relative;
-    width: 98.9vw;
-    height: 36.14vh;
+    width: 100%;
+    height: 210px;
     text-transform: uppercase;
     color: white;
     text-align: center;
@@ -637,40 +634,33 @@ footer{
         
     }
     
-    .container-fluid5{
-        overflow: hidden;
-        width: 450px;
-        height: 350px;
-        overflow: hidden;
-
-    }
+    .container-fluid5
 
     .container-fluid5 .row{
         flex-direction: column;
         height: 350px;
         margin: 0;
         padding: 0;
-        width: 450px;
+        width: 100%;
         position: relative;
-        overflow: hidden;
+        
         
     }
     #imgguerreiro{display: none;}
     
     .container-fluid5 .row .col-6{
-        width: 450px;
+        width: 100%;
         position: relative;
-        height: 200px;
-        overflow: hidden;
-        
+        height: 190px;
+        overflow-y: hidden;
         
     }
 
     #img-carrousel .imgtexto img {
-        width: 450px;
-        height: 200px;
+        width: 70%;
+        height: 190px;
         position: relative;
-        overflow: hidden;
+        
     }
 
     
@@ -687,20 +677,20 @@ footer{
     #imgguerreiroc{
         display: flex;
         width: 225px;
-        height: 150px;
+        height: 140px;
         
     }
 
     #imgguerreiroc img{
         display: flex;
         width: 225px;
-        height: 150px;
+        height: 140px;
     }
     
     .img-direita{
         display: flex;
         width: 235px;
-        height: 150px;
+        height: 140px;
     }
 
     .img-direita img{
@@ -710,7 +700,7 @@ footer{
     }
 
     .textcomprar{
-       
+        display: none;
     }
     
 
@@ -733,7 +723,6 @@ footer{
 
 
     
-
 
 
 
