--- a/css/style.css
+++ b/css/style.css
@@ -582,13 +582,13 @@ p.solid2 label{
 }
 
 .container-fluid6{
-    width: 98.9vw;
+    width: 1351px;
     height: 210px;
 
 }
 
 .container-fluid6 .row g-0 .col-4{
-    width: 98.9vw;
+    width: 1351px;
     height: 210px;
 
 }
@@ -597,7 +597,7 @@ p.solid2 label{
 
 .rodape{
     position: relative;
-    width: 98.9vw;
+    width: g;
     height: 210px;
     text-transform: uppercase;
     color: white;
