--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ p.solid{border-style: ridge;
     color: white;
     width: 12.48vw;
     height: 40px;
-    padding-top: 8px;
+    padding-top: 1.377vh;
     text-transform: uppercase;
     text-decoration: none;
     font-size: medium;
@@ -501,7 +501,7 @@ p.solid2 label{
 
 .depoimentos{
     
-    width: 100%;
+    width: 98.9vw;
     height: 400px;
     background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
     position: relative;
@@ -575,9 +575,9 @@ p.solid2 label{
 .depoimentos p{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15px;
-    width: 25%;
-    padding-bottom: 10px;
+    margin-top: 2.58vh;
+    width: 337.75px;
+    padding-bottom: 1.72vh;
     text-align: justify;
 }
 
@@ -585,7 +585,7 @@ p.solid2 label{
 
 .rodape{
     position: relative;
-    width: 100%;
+    width: 98.9vw;
     height: 210px;
     text-transform: uppercase;
     color: white;
@@ -605,11 +605,12 @@ p.solid2 label{
 
 }
 
+
 .figure5{
     width: 2.93vw;
     height: 6.88vh;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-right: 1.464vw;
+    margin-bottom: 1.72vh;
     
 }
 
@@ -682,27 +683,27 @@ p.solid2 label{
     #imgguerreiroc{
         position: relative;
         display: flex;
-        width: 225px;
-        height: 180px;
+        width: 200px;
+        height: 120px;
         
     }
 
     #imgguerreiroc img{
         display: flex;
-        width: 225px;
-        height: 180px;
+        width: 200px;
+        height: 120px;
     }
     
     .img-direita{
         display: flex;
-        width: 225px;
-        height: 180px;
+        width: 200px;
+        height: 120px;
     }
 
     .img-direita img{
         display: flex;
-        width: 225px;
-        height: 180px;
+        width: 200px;
+        height: 120px;
     }
 
     .textcomprar{
