Concluindo capa celular

--- a/css/style.css
+++ b/css/style.css
@@ -674,7 +674,7 @@ p.solid2 label{
 
     #img-carrousel .imgtexto h3{
         position: absolute;
-        
+        margin-left: 25.78vw;
     text-align: center;
         
         
