Alterando texto capa

--- a/css/style.css
+++ b/css/style.css
@@ -675,6 +675,7 @@ p.solid2 label{
     #img-carrousel .imgtexto h3{
         position: absolute;
         margin-left: 25.78vw;
+        margin-top: 0.86vh;
     text-align: center;
         
         
