--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ p.solid{border-style: ridge;
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 10px;
+    margin: 0 10px ;
     background-color: #bbb;
     border-radius: 50%;
     text-align: center;
@@ -761,11 +761,15 @@ p.solid2 label{
        
     
     .figure2{
-
+        width: 100px;
+        height: 100px;
 
     }
 
+    .textcentro p{
+        font-size: small;
 
+    }
 
 
 }
