consertando tamanho imagens

--- a/css/style.css
+++ b/css/style.css
@@ -761,13 +761,13 @@ p.solid2 label{
        
     
     .figure2{
-        width: 50px;
-        height: 100px;
+        width: 18.32vw;
+        height: 30.23vh;
 
     }
 
     .textcentro p{
-        font-size: small;
+        
 
     }
 
