concluindo tamanho imagens

--- a/css/style.css
+++ b/css/style.css
@@ -761,8 +761,8 @@ p.solid2 label{
        
     
     .figure2{
-        width: 18.32vw;
-        height: 30.23vh;
+        width: 100px;
+        height: 10px;
 
     }
 
