--- a/css/style.css
+++ b/css/style.css
@@ -782,13 +782,13 @@ p.solid2 label{
     
     .botao{
         width: 25.59vw;
-        height: 10vh;
+        height: 5vh;
     }
     
 
     .botao .textcomprar p{
         margin-left: 3.80vw;
-        margin-bottom: 9.00vh;
+        margin-bottom: 8.4g0vh;
     }
 
 
