--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ p.solid2 label{
 
     .botao .textcomprar p{
         margin-left: 3.80vw;
-        margin-bottom: 8.4g0vh;
+        margin-bottom: 8.40vh;
     }
 
 
