--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ p.solid{border-style: ridge;
     background-color: rgb(9, 99, 9);
     color: white;
     width: 12.48vw;
-    height: 40px;
+    height: 6.88vh;
     padding-top: 1.377vh;
     text-transform: uppercase;
     text-decoration: none;
