testando posicionamento das classes

--- a/css/style.css
+++ b/css/style.css
@@ -793,6 +793,18 @@ p.solid2 label{
         margin-bottom: 8.40vh;
     }
 
+    .figure4{
+        width: 30px;
+        height: 30px;
+    }
+
+    #seta1{
+        top: 32.65vh;
+    }
+    #seta2{
+        top: 32.65vh;
+    }
+
 
 }
 
