--- a/css/style.css
+++ b/css/style.css
@@ -794,26 +794,21 @@ p.solid2 label{
     }
 
     #depo1 img{
-        width: 30px;
-        height: 30px;
+        width: 10vw;
+        height: 10vh;
     }
 
     #depo2 img{
-        width: 30px;
-        height: 30px;
+        width: 10vw;
+        height: 10vh;
     }
 
     #depo3 img{
-        width: 30px;
-        height: 30px;
+        width: 10vw;
+        height: 10vh;
     }
 
-    #seta1{
-        top: 32.65vh;
-    }
-    #seta2{
-        top: 32.65vh;
-    }
+    
 
 
 }
